--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</center>
 	<div class="feedback">
 	
-	<a href="Page 2 html.html"> <button class="btn">Règle</button>
+	<a href="./index2.html"> <button class="btn">Règle</button>
 									<script>
 										var btn = document.querySelector(".btn);
 										var position;
@@ -51,7 +51,7 @@
 		</div>
 	</a>
 
-	<a href="Page 3 html.html"> <button class="btn">Lancer une Partie</button>
+	<a href="index3.html"> <button class="btn">Lancer une Partie</button>
 									<script>
 										var btn = document.querySelector(".btn);
 										var position;
@@ -63,7 +63,7 @@
 									</script>
 		</div>
 	</a>	
-	<a href="Page 4 html.html"> <button class="btn">Lancer un Tutoriel</button>
+	<a href="index4.html"> <button class="btn">Lancer un Tutoriel</button>
 									<script>
 										var btn = document.querySelector(".btn);
 										var position;
