--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	</center>
 	<div class="feedback">
 	
-	<a href="./index2.html"> <button class="btn">Règle</button>
+	<a href="index2.html"> <button class="btn">Règle</button>
 									<script>
 										var btn = document.querySelector(".btn);
 										var position;
