--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 										var position;
 										btn.addEventListener("mouseover", function) {}
 											position ? (position = 150) : (position = 150);
-											btn.style.transform = 'translate(§{position}px,0px
+											btn.style.transform = 'translate(§{position}px,0px)
 											btn.style.transition = "all 0.3s ease";
 										});
 									</script>
