--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 <h1>Les Rêgles du Jeu</h1>
 
 
-<a href="Page 1 html.html"><button>Accueil</button></a>
+<a href="index1.html"><button>Accueil</button></a>
 </div>
 </nav>
 
@@ -257,7 +257,7 @@ Bon ... vous trouverez ci-dessous, une vidéo de Fabien Olicard présentant les 
 <br>
 
 <center>
-<iframe width="890" height="483" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 </center>
 
 </body>
