--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
 <h1>Les Rêgles du Jeu</h1>
 
 
-<a href="index1.html"><button>Accueil</button></a>
+<a href="index.html"><button>Accueil</button></a>
 </div>
 </nav>
 
