--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
 <h1>Lancer une Partie</h1>
 
 
-<a href="Page 1 html.html"><button>Accueil</button></a>
+<a href="index.html"><button>Accueil</button></a>
 </div>
 </nav>
 
