--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 									</script>
 		</div>
 	</a>
-
+	<div class="col-md-10">
 	<a href="index3.html"> <button class="btn">Lancer une Partie</button>
 									<script>
 										var btn = document.querySelector(".btn);
