--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <!-- La barre de navigation -->
-	<nav class="navbar navbar-expand-1g navbar-black bg-black">
+	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 	<a class="navbar-brand" href="#">
 	<img src="Logo.jpg" width="80" height="80">
 	</a>
