--- a/index.html
+++ b/index.html
@@ -38,20 +38,20 @@
 	</center>
 	<div class="feedback">
 	
-	<a href="index2.html"> <button class="btn">Règle</button>
+	<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
 									<script>
 										var btn = document.querySelector(".btn);
 									</script>
 		</div>
 	</a>
 
-	<a href="index3.html"> <button class="btn">Lancer une Partie</button>
+	<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
 									<script>
 										var btn = document.querySelector(".btn);
 									</script>
 		</div>
 	</a>	
-	<a href="index4.html"> <button class="btn">Lancer un Tutoriel</button>
+	<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
 									<script>
 										var btn = document.querySelector(".btn);
 									</script>
