--- a/index.html
+++ b/index.html
@@ -40,20 +40,20 @@
 	
 	<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
 									<script>
-										var btn = document.querySelector(".btn);
+										var btn
 									</script>
 		</div>
 	</a>
 
 	<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
 									<script>
-										var btn = document.querySelector(".btn);
+										var btn
 									</script>
 		</div>
 	</a>	
 	<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
 									<script>
-										var btn = document.querySelector(".btn);
+										var btn
 									</script>
 		</div>
 	</a>	
