--- a/index3.html
+++ b/index3.html
@@ -42,17 +42,11 @@
 <!-- Conteneur principal -->
 	<div class="container">
 
-	<center-left>
-	<a href="Page 4 html.html"><button>2 Joueurs</button></a>
-	</center-left>
-	
-	<center>
-	<a href="Page 4 html.html"><button>3 Joueurs</button></a>	
-	</center>
-	
-	<center-right>
-	<a href="Page 4 html.html"><button>4 Joueurs</button></a>
-	</center-right>
+		<!-- <a href="Page 4 html.html"><button>2 Joueurs</button></a> -->
+		
+		<!-- <a href="Page 4 html.html"><button>3 Joueurs</button></a> -->
+		
+		<!-- <a href="Page 4 html.html"><button>4 Joueurs</button></a> -->
 	
 	</div>
 
