--- a/index.html
+++ b/index.html
@@ -23,43 +23,50 @@
 
 <body>
 
-
+<!-- ---------------------- -->
 <!-- La barre de navigation -->
+<!-- ---------------------- -->
+	
 	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 	<a class="navbar-brand" href="#">
 	<img src="Logo.jpg" width="80" height="80">
 	</a>
 
 <!-- Première colonne -->
-	<div class="col-md-8">
-		<h1>Le Jeu du Cul de Chouette </h1>
-	</div>
+		<div class="col-md-8">
+			<h1>Le Jeu du Cul de Chouette </h1>
+		</div>
 
-	<div class="feedback">
-	
-		<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
-										<script>
-											var btn
-										</script>
-		</a>
+		<div class="feedback">
+		
+			<div class="col-md-8">
+				<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
+												<script>
+													var btn
+												</script>
+				</a>
 
-		<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
-										<script>
-											var btn
-										</script>
-		</a>	
+				<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
+												<script>
+													var btn
+												</script>
+				</a>	
 
-		<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
-										<script>
-											var btn
-										</script>
-		</a>	
-
-	</div>
+				<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
+												<script>
+													var btn
+												</script>
+				</a>	
+			</div>
+		</div>
 	</nav>
 
 	<br>
 	<br>
+
+<!-- ------------------- -->
+<!--    Corps de page    -->
+<!-- ------------------- -->
 
 <!-- Conteneur principal -->
 <div class="container">
