--- a/index.html
+++ b/index.html
@@ -33,32 +33,32 @@
 	</a>
 
 <!-- Première colonne -->
-		<div class="col-md-8">
-			<h1>Le Jeu du Cul de Chouette </h1>
-		</div>
+	<div class="col-md-8">
+		<h1>Le Jeu du Cul de Chouette </h1>
+	</div>
 
-		<div class="feedback">
-		
-			<div class="col-md-8">
-				<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
-												<script>
-													var btn
-												</script>
-				</a>
+	<div class="feedback">
 
-				<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
-												<script>
-													var btn
-												</script>
-				</a>	
+		<center>
+			<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
+											<script>
+												var btn
+											</script>
+			</a>
 
-				<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
-												<script>
-													var btn
-												</script>
-				</a>	
-			</div>
-		</div>
+			<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
+											<script>
+												var btn
+											</script>
+			</a>	
+
+			<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
+											<script>
+												var btn
+											</script>
+			</a>
+		</center>
+	</div>
 	</nav>
 
 	<br>
