--- a/index3.html
+++ b/index3.html
@@ -42,6 +42,12 @@
 <!-- Conteneur principal -->
 	<div class="container">
 
+		<div class="information alert alert-secondary" role="alert">
+			<p>
+				COMMING SOON
+			</p>
+		</div>
+
 		<!-- <a href="Page 4 html.html"><button>2 Joueurs</button></a> -->
 		
 		<!-- <a href="Page 4 html.html"><button>3 Joueurs</button></a> -->
