--- a/index2.html
+++ b/index2.html
@@ -264,5 +264,6 @@
 	<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	</center>
 
-	</body>
-	</html>
+	<div class="row">
+</body>
+</html>
