--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
 <h1>Lancer une Partie</h1>
 
 
-<a href="index.html"><button>Accueil</button></a>
+<a href="index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button></a>
 </div>
 </nav>
 
@@ -43,9 +43,7 @@
 	<div class="container">
 
 		<div class="information alert alert-secondary" role="alert">
-			<p>
-				COMMING SOON
-			</p>
+			COMMING SOON !
 		</div>
 
 		<!-- <a href="Page 4 html.html"><button>2 Joueurs</button></a> -->
