--- a/index2.html
+++ b/index2.html
@@ -33,7 +33,7 @@
 			<h1>Les Rêgles du Jeu</h1>
 
 
-			<a href="index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button></a>
+			<a href="index.html"><button class="btn"><span style='color:white'>Accueil</span></button></a>
 									<script>
 										var btn
 									</script>
