--- a/index2.html
+++ b/index2.html
@@ -250,6 +250,7 @@
 
 	<br>
 	<br>
+
 	<div class="information alert alert-secondary" role="alert">
 		Doublette : <br>
 
@@ -260,25 +261,29 @@
 		en sachant qu’il faut repartir les membres de chaque équipe de manière équivalente tout autour de la table.
 	</div>
 
-	<br>
-	<br>
-
-	<p>
-	C'est marrant mais ...
-	</p>
-	<img src="j'ai rien compris.gif">
+</div>
 
 	<br>
 	<br>
-	<br>
-	<p>
-	Bon ... vous trouverez ci-dessous, une vidéo de Fabien Olicard présentant les règles en les illustrant.
-	</p>
-	<br>
+	
+	<div class="information alert alert-secondary" role="alert"></div>
+		<p>
+		C'est marrant mais ...
+		</p>
+		<img src="j'ai rien compris.gif">
 
-	<center>
-	<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-	</center>
+		<br>
+		<br>
+		<br>
+		<p>
+		Bon ... vous trouverez ci-dessous, une vidéo de Fabien Olicard présentant les règles en les illustrant.
+		</p>
+		<br>
+
+		<center>
+		<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		</center>
+	</div>
 
 	<div class="row">
 </body>
