--- a/index2.html
+++ b/index2.html
@@ -96,7 +96,7 @@
 	<br>
 	<br>
 
-	<div class="information alert alert-secondary" role="alert"></div>
+	<div class="information alert alert-secondary" role="alert">
 		Chouette Velute : <br>
 
 		Une Chouette en plus d’une velute. Par exemple : deux 3 et un 6.
@@ -261,11 +261,9 @@
 		en sachant qu’il faut repartir les membres de chaque équipe de manière équivalente tout autour de la table.
 	</div>
 
-</div>
+	<br>
+	<br>
 
-	<br>
-	<br>
-	
 	<div class="information alert alert-secondary" role="alert"></div>
 		<p>
 		C'est marrant mais ...
@@ -284,7 +282,8 @@
 		<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		</center>
 	</div>
+</div>
 
-	<div class="row">
+<div class="row">
 </body>
 </html>
