--- a/index2.html
+++ b/index2.html
@@ -57,7 +57,6 @@
 	</div>
 
 	<br>
-	<br>
 
 	<div class="information alert alert-secondary" role="alert">
 		La Chouette : <br>
@@ -76,7 +75,6 @@
 	</div>
 
 	<br>
-	<br>
 	
 	<div class="information alert alert-secondary" role="alert">
 		La Velute : <br>
@@ -94,8 +92,6 @@
 	</div>
 
 	<br>
-	<br>
-
 	<div class="information alert alert-secondary" role="alert">
 		Chouette Velute : <br>
 
@@ -109,7 +105,6 @@
 		La Chouette Velute vaut les points de la Velute.
 	</div>
 
-	<br>
 	<br>
 
 	<div class="information alert alert-secondary" role="alert">
@@ -128,7 +123,6 @@
 	</div>
 
 	<br>
-	<br>
 
 	<div class="information alert alert-secondary" role="alert">
 		Suite : <br>
@@ -140,7 +134,6 @@
 		En cas d’égalité, les joueurs sont départagés par un « Sans fin, est la moisissure des bières bretonnes »).
 	</div>
 
-	<br>
 	<br>
 
 	<div class="information alert alert-secondary" role="alert">
@@ -169,7 +162,6 @@
 	</div>
 
 	<br>
-	<br>
 
 	<div class="information alert alert-secondary" role="alert">
 		Civet : <br>
@@ -189,7 +181,6 @@
 	</div>
 
 	<br>
-	<br>
 
 	<div class="information alert alert-secondary" role="alert">
 		Civet siroté : <br>
@@ -202,7 +193,6 @@
 	</div>
 
 	<br>
-	<br>
 
 	<div class="information alert alert-secondary" role="alert">
 		Néant : <br>
@@ -214,7 +204,6 @@
 		il peut alors l’utiliser pour défier le joueur
 	</div>
 
-	<br>
 	<br>
 
 	<div class="information alert alert-secondary" role="alert">
@@ -236,7 +225,6 @@
 	</div>
 	
 	<br>
-	<br>
 
 	<div class="information alert alert-secondary" role="alert">
 		Bévue : <br>
@@ -248,7 +236,6 @@
 		a une Chouette, et non pas une suite.
 	</div>
 
-	<br>
 	<br>
 
 	<div class="information alert alert-secondary" role="alert">
@@ -262,16 +249,13 @@
 	</div>
 
 	<br>
-	<br>
 
-	<div class="information alert alert-secondary" role="alert"></div>
+	<div class="information alert alert-secondary" role="alert">
 		<p>
 		C'est marrant mais ...
 		</p>
 		<img src="j'ai rien compris.gif">
 
-		<br>
-		<br>
 		<br>
 		<p>
 		Bon ... vous trouverez ci-dessous, une vidéo de Fabien Olicard présentant les règles en les illustrant.
