--- a/index4.html
+++ b/index4.html
@@ -29,10 +29,13 @@
 </a>
 <!-- Première colonne -->
 <div class="col-md-8">
-<h1>Error 404 page no found</h1>
+<h1>Le Tutoriel de JAMY</h1>
 
 
-<a href="index.html"><button>Accueil</button></a>
+<a href="index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button></a>
+						<script>
+							var btn
+						</script>
 </div>
 </nav>
 
@@ -41,11 +44,9 @@
 
 <!-- Conteneur principal -->
 <div class="container">
-
-
-<!-- Première colonne -->
-<div class="col-md-4">
-</div>
+	<div class="information alert alert-secondary" role="alert">
+		COMMING SOON !
+	</div>
 
 
 </body>
