--- a/index4.html
+++ b/index4.html
@@ -44,8 +44,10 @@
 
 <!-- Conteneur principal -->
 <div class="container">
-	<div class="information alert alert-secondary" role="alert">
-		COMMING SOON !
+	<div class="col-md-4">
+		<div class="information alert alert-secondary" role="alert">
+			COMMING SOON !
+		</div>
 	</div>
 
 <div class="row">
