--- a/index3.html
+++ b/index3.html
@@ -43,7 +43,9 @@
 	<div class="container">
 	
 		<div class="information alert alert-secondary" role="alert">
-			COMMING SOON !
+			<center>
+				COMMING SOON !
+			</center>
 		</div>
 
 		<!-- <a href="Page 4 html.html"><button>2 Joueurs</button></a> -->
