--- a/index4.html
+++ b/index4.html
@@ -46,7 +46,9 @@
 <div class="container">
 
 	<div class="information alert alert-secondary" role="alert">
-		COMMING SOON !
+		<center>
+			COMMING SOON !
+		</center>
 	</div>
 
 <div class="row">
