--- a/index4.html
+++ b/index4.html
@@ -48,6 +48,7 @@
 	<div class="information alert alert-secondary" role="alert">
 		<center>
 			COMMING SOON !
+		</center>
 	</div>
 
 <div class="row">
