--- a/index.html
+++ b/index.html
@@ -72,6 +72,12 @@
 
 <!-- Première colonne -->
 
+<image file="background2.jpeg" width="400" height="400">
+	<grande-image file="background2.jpeg">
+	   <légende>wsh wsh canne a peche</légende>
+	</grande-image>
+</image>
+
 	<center>
 	<img src="Ilustration.jpg" width="400" height="400">
 	</center>
