--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
 <!-- Première colonne -->
 
-<image file="background2.jpeg" width="400" height="400">
-	<grande-image file="background2.jpeg">
+<image src="background2.jpeg" width="400" height="400">
+	<grande-image src="background2.jpeg">
 	   <légende>wsh wsh canne a peche</légende>
 	</grande-image>
 </image>
