--- a/index.html
+++ b/index.html
@@ -71,12 +71,15 @@
 <div class="container">
 
 <!-- Première colonne -->
-
-<image src="background2.jpeg" width="400" height="400">
-	<grande-image src="background2.jpeg">
-	   <légende>wsh wsh canne a peche</légende>
-	</grande-image>
-</image>
+	<popup id="test">
+		<image src="background2.jpeg" width="400" height="400">
+			<grande-image src="background2.jpeg">
+			<légende>wsh wsh canne a peche</légende>
+			</grande-image>
+		</image>
+	</popup>
+	
+	<p><a cible="popup:test">TEST</a>.</p>
 
 	<center>
 	<img src="Ilustration.jpg" width="400" height="400">
