--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 <!-- Première colonne -->
 		<div class="col-md-8">
-			<h1>Le Jeu du Cul de Chouette </h1>
+			<h1>Le Jeu du Cul de Chouette</h1><button>fze</button>
 		
 
 		<div class="feedback">
