--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 		</image>
 	</popup>
 	
-	<p><a cible="popup:test">TEST</a>.</p>
+	<p><a cible="popup:test">TEST</a></p>
 
 	<center>
 	<img src="Ilustration.jpg" width="400" height="400">
