--- a/index.html
+++ b/index.html
@@ -34,8 +34,11 @@
 
 <!-- Première colonne -->
 		<div class="col-md-8">
-			<h1>Le Jeu du Cul de Chouette</h1><button>fze</button>
-		
+			<h1>Le Jeu du Cul de Chouette</h1>
+			
+			<center-right>
+				<button>fze</button>
+			</center-right>
 
 		<div class="feedback">
 
