--- a/index.html
+++ b/index.html
@@ -34,32 +34,28 @@
 
 <!-- Première colonne -->
 		<div class="col-md-8">
-			<h1>Le Jeu du Cul de Chouette</h1>
-			
-			<center-right>
-				<button>fze</button>
-			</center-right>
+			<h1>Le Jeu du Cul de Chouette						<button>fze</button></h1>
 
-		<div class="feedback">
+			<div class="feedback">
 
-			<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
-											<script>
-												var btn
-											</script>
-			</a>
+				<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
+												<script>
+													var btn
+												</script>
+				</a>
 
-			<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
-											<script>
-												var btn
-											</script>
-			</a>	
+				<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
+												<script>
+													var btn
+												</script>
+				</a>	
 
-			<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
-											<script>
-												var btn
-											</script>
-			</a>
-		</div>
+				<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
+												<script>
+													var btn
+												</script>
+				</a>
+			</div>
 		</div>
 	</nav>
 
