--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
 
 <!-- Première colonne -->
 		<div class="col-md-8">
-			<h1>Le Jeu du Cul de Chouette                        </h1><h2><button>fze</button></h2>
+			<h1>Le Jeu du Cul de Chouette</h1>
+			
+			<h2>
+				<button>	
+					<popup id="test">
+						<image src="background2.jpeg" width="400" height="400">
+							<grande-image src="background2.jpeg">
+								<légende>wsh wsh canne a peche</légende>
+							</grande-image>
+						</image>
+					</popup>
+			
+					<p><a cible="popup:test">TEST</a></p>
+				</button>
+			</h2>
 
 			<div class="feedback">
 
@@ -70,15 +84,7 @@
 <div class="container">
 
 <!-- Première colonne -->
-	<popup id="test">
-		<image src="background2.jpeg" width="400" height="400">
-			<grande-image src="background2.jpeg">
-			<légende>wsh wsh canne a peche</légende>
-			</grande-image>
-		</image>
-	</popup>
-	
-	<p><a cible="popup:test">TEST</a></p>
+
 
 	<center>
 	<img src="Ilustration.jpg" width="400" height="400">
