--- a/index.html
+++ b/index.html
@@ -39,10 +39,9 @@
 			<h2>
 				<button>	
 					<popup id="test">
-						<image src="background2.jpeg" width="400" height="400">
-							<grande-image src="background2.jpeg">
+						<image src="background2.jpeg" width="40" height="40">
+							<img src="background2.jpeg">
 								<légende>wsh wsh canne a peche</légende>
-							</grande-image>
 						</image>
 					</popup>
 			
