--- a/index.html
+++ b/index.html
@@ -44,8 +44,7 @@
 								<légende>wsh wsh canne a peche</légende>
 						</image>
 					</popup>
-			
-					<p><a cible="popup:test">TEST</a></p>
+					<a cible="popup:test">TEST</a>
 				</button>
 			</h2>
 
