--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
 			<h2>
 				<button>	
 					<popup id="test">
-						<image src="background2.jpeg" width="40" height="40">
-							<img src="background2.jpeg">
+						<img src="background2.jpeg" width="40" height="40">
 								<légende>wsh wsh canne a peche</légende>
-						</image>
 					</popup>
 					<a cible="popup:test">TEST</a>
 				</button>
