--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
 		<div class="col-md-8">
 			<h1>Le Jeu du Cul de Chouette</h1>
 			
-			<h2>
-				<button>	
-					<popup id="test">
-						<img src="background2.jpeg" width="40" height="40">
-								<légende>wsh wsh canne a peche</légende>
-					</popup>
-					<a cible="popup:test">TEST</a>
-				</button>
-			</h2>
+			<button>	
+				<popup id="test">
+					<img src="background2.jpeg" width="40" height="40">
+						<légende><h3>wsh wsh canne a peche</h3></légende>
+				</popup>
+				<a cible="popup:test">TEST</a>
+			</button>
 
 			<div class="feedback">
 
