--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
 		</a>
 
 <!-- Première colonne -->
+<h1>Le Jeu du Cul de Chouette</h1>
+
 		<div class="col-md-8">
 			<h1>Le Jeu du Cul de Chouette</h1>
 
