--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
 		</a>
 
 <!-- Première colonne -->
+<center-center>
 <h1>Le Jeu du Cul de Chouette</h1>
+</center-center>
 
-		<div class="col-md-8">
+		<div class="col-md-10">
 
 			<div class="feedback">
 
