--- a/index.html
+++ b/index.html
@@ -22,17 +22,19 @@
 </head>
 
 <body>
-
-<!-- ---------------------- -->
-<!-- La barre de navigation -->
-<!-- ---------------------- -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                         La barre de navigation                                         -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
 	
+	<!-- Création de la barre de navigation -->
+
 	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">
 			<img src="Logo.jpg" width="80" height="80">
 		</a>
 
-<!-- Première colonne -->
+	<!-- Contenu de la barre de navigation -->
+
 		<div class="col-md-8">
 			<h1>Le Jeu du Cul de Chouette</h1>
 
@@ -62,15 +64,11 @@
 	<br>
 	<br>
 
-<!-- ------------------- -->
-<!--    Corps de page    -->
-<!-- ------------------- -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                             Corps de page                                              -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
 
-<!-- Conteneur principal -->
 <div class="container">
-
-<!-- Première colonne -->
-
 
 	<center>
 	<img src="Ilustration.jpg" width="400" height="400">
@@ -81,13 +79,14 @@
 	<h2>Origine du jeu :</h2>
 
 
-	<!-- Message informatif -->
+	<!-- Message -->
 	<div class="information alert alert-secondary" role="alert">
 	Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
 	par Alexandre Astier et se joue avec trois dés, et idéalement à trois
 	joueurs.
 	</div>
-	<div class="row">
+	
+	<!--div class="row"-->
 
 </body>
 </html>
