--- a/3 - Lancer Partie/index3.html
+++ b/3 - Lancer Partie/index3.html
@@ -7,57 +7,54 @@
 	<!-- Bug Safari 9 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="Logo.jpg" >
+	<link rel="shortcut icon" href="../IMAGES/Logo.jpg" >
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- Leaflet CSS -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-	<!-- Leaflet JS -->
-	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 	<!-- Feuille de style -->
 	<link rel="stylesheet" href="style3.css">
-	<!-- Javascript -->
-	<script src="JS.js" async defer></script> 
 </head>
 
 <body>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                         La barre de navigation                                         -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
 
-<!-- La barre de navigation -->
-<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-<a class="navbar-brand" href="#">
-<img src="Logo.jpg" width="80" height="80">
-</a>
-<!-- Première colonne -->
-<div class="col-md-8">
-<h1>Lancer une Partie</h1>
+	<!-- Création de la barre de navigation -->
+		
+		<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
+			<a class="navbar-brand" href="#">
+				<button class="btn"><img src="../IMAGES/Logo.jpg" width="80" height="80"></button>
+			</a>
 
+	<!-- Contenu de la barre de navigation -->
+			<div class="col-md-8">
+				<h1>Lancer une Partie</h1>
 
-<a href="index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button></a>
-</div>
-</nav>
+				<a href="../index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button>
+				</a>
+			</div>
+		</nav>
 
-<br>
-<br>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                             Corps de page                                              -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
 
-<!-- Conteneur principal -->
-	<div class="container">
+<div class="container">
 	
-		<div class="information alert alert-secondary" role="alert">
-			<center>
-				COMMING SOON !
-			</center>
-		</div>
-
-		<!-- <a href="Page 4 html.html"><button>2 Joueurs</button></a> -->
-		
-		<!-- <a href="Page 4 html.html"><button>3 Joueurs</button></a> -->
-		
-		<!-- <a href="Page 4 html.html"><button>4 Joueurs</button></a> -->
+	<div class="information alert alert-secondary" role="alert">
+		<center>
+			COMMING SOON !
+		</center>
 	</div>
 
-<!-- Première colonne -->
-
-<div class="row">
+	<!-- <a href="Page 4 html.html"><button>2 Joueurs</button></a> -->
+		
+	<!-- <a href="Page 4 html.html"><button>3 Joueurs</button></a> -->
+		
+	<!-- <a href="Page 4 html.html"><button>4 Joueurs</button></a> -->
+</div>
 
 </body>
 </html>
