--- a/4 - Lancer Tuto/index4.html
+++ b/4 - Lancer Tuto/index4.html
@@ -12,37 +12,35 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- Leaflet CSS -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-	<!-- Leaflet JS -->
-	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 	<!-- Feuille de style -->
 	<link rel="stylesheet" href="style4.css">
-	<!-- Javascript -->
-	<script src="JS.js" async defer></script> 
 </head>
 
 <body>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                         La barre de navigation                                         -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
 
-<!-- La barre de navigation -->
-<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-<a class="navbar-brand" href="#">
-<img src="Logo.jpg" width="80" height="80">
-</a>
-<!-- Première colonne -->
-<div class="col-md-8">
-<h1>Le Tutoriel de JAMY</h1>
+	<!-- Création de la barre de navigation -->
+		
+	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">
+			<button class="btn"><img src="../IMAGES/Logo.jpg" width="80" height="80"></button>
+		</a>
 
+<!-- Contenu de la barre de navigation -->
+		<div class="col-md-8">
+			<h1>Le Tutoriel de JAMY</h1>
 
-<a href="index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button></a>
-						<script>
-							var btn
-						</script>
-</div>
-</nav>
+			<a href="../index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button>
+			</a>
+		</div>
+	</nav>
 
-<br>
-<br>
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                             Corps de page                                              -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
 
-<!-- Conteneur principal -->
 <div class="container">
 
 	<div class="information alert alert-secondary" role="alert">
