--- a/index.html
+++ b/index.html
@@ -7,18 +7,13 @@
 	<!-- Bug Safari 9 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="Logo.jpg" >
+	<link rel="shortcut icon" href="IMAGES/Logo.jpg" >
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- Leaflet CSS -->
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-	<!-- Leaflet JS -->
-	<script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js" integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA==" crossorigin=""></script>
 	<!-- Feuille de style -->
 	<link rel="stylesheet" href="style.css">
-	<!-- Javascript -->
-	<script src="JS.js" async defer></script> 
-	<link rel= "stylesheet">
 </head>
 
 <body>
@@ -28,41 +23,31 @@
 	
 	<!-- Création de la barre de navigation -->
 
-	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">
-			<img src="Logo.jpg" width="80" height="80">
-		</a>
+		<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
+			<a class="navbar-brand" href="#">
+				<button class="btn"><img src="IMAGES/Logo.jpg" width="80" height="80"></button>			
+			</a>
 
 	<!-- Contenu de la barre de navigation -->
 
-		<div class="col-md-8">
-			<h1>Le Jeu du Cul de Chouette</h1>
+			<div class="col-md-8">
+				<h1>Le Jeu du Cul de Chouette</h1>
 
-			<div class="feedback">
+				<div class="feedback">
 
-				<a href="index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
-												<script>
-													var btn
-												</script>
-				</a>
+					<a href="2 - Règles/index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
+					</a>
 
-				<a href="index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
-												<script>
-													var btn
-												</script>
-				</a>	
+					<a href="3 - Lancer Partie/index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
+					</a>	
 
-				<a href="index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
-												<script>
-													var btn
-												</script>
-				</a>
+					<a href="4 - Lancer Tuto/index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
+					</a>
+				</div>
 			</div>
-		</div>
-	</nav>
-
-	<br>
-	<br>
+		</nav>
+<br>
+<br>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                             Corps de page                                              -->
@@ -71,7 +56,7 @@
 <div class="container">
 
 	<center>
-	<img src="Ilustration.jpg" width="400" height="400">
+	<img src="IMAGES/Ilustration.jpg" width="400" height="400">
 	</center>
 
 	<br>
@@ -85,8 +70,7 @@
 	par Alexandre Astier et se joue avec trois dés, et idéalement à trois
 	joueurs.
 	</div>
-	
-	<!--div class="row"-->
+</div>
 
 </body>
 </html>
