--- a/2 - Règles/index2.html
+++ b/2 - Règles/index2.html
@@ -45,6 +45,8 @@
 
 <div class="container">
 
+	<!-- Bloc 1 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Chaque joueur lance deux dés (les chouettes) puis après, le dernier dés (le cul), chacun son tour.
 		Une fois les trois dés joués, il faut compter les points faits par le joueur. <br>
@@ -54,6 +56,8 @@
 		<br>
 		Pour se faire, il faudra faire des combinaisons. Les combinaisons sont les suivantes :
 	</div>
+
+	<!-- Bloc 2 -->
 
 	<div class="information alert alert-secondary" role="alert">
 		La Chouette : <br>
@@ -71,6 +75,8 @@
 		Chouette de 6 = 36 pts
 	</div>
 	
+	<!-- Bloc 3 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		La Velute : <br>
 
@@ -86,6 +92,8 @@
 		Velute de 6 = 72 pts,
 	</div>
 	
+	<!-- Bloc 4 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Chouette Velute : <br>
 
@@ -98,6 +106,8 @@
 		<br>
 		La Chouette Velute vaut les points de la Velute.
 	</div>
+
+	<!-- Bloc 5 -->
 
 	<div class="information alert alert-secondary" role="alert">
 		Cul de Chouette : <br>
@@ -114,6 +124,8 @@
 		Cul de chouette de 6 = 100pt.
 	</div>
 
+	<!-- Bloc 6 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Suite : <br>
 
@@ -123,6 +135,8 @@
 		Le dernier à avoir fait cet enchaînement perd 10 points. <br>
 		En cas d’égalité, les joueurs sont départagés par un « Sans fin, est la moisissure des bières bretonnes »).
 	</div>
+
+	<!-- Bloc 7 -->
 
 	<div class="information alert alert-secondary" role="alert">
 		Sirotage : <br>
@@ -149,6 +163,8 @@
 		(sa Chouette de 3), et Paulo ne marque aucun point.
 	</div>
 
+	<!-- Bloc 8 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Civet : <br>
 
@@ -166,6 +182,8 @@
 		Il est possible de miser au maximum, 102 points.
 	</div>
 
+	<!-- Bloc 9 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Civet siroté : <br>
 
@@ -176,6 +194,8 @@
 		Par exemple : Luc fait une Chouette de 6, il tente alors un sirotage. Il joue le dé qui tombe sur un 4. Luc perd les 36 points de sa Chouette, mais gagne un Civet. Et si un joueur a misé sur Mouette, ce joueur gagne 25 points. Si, par contre, Luc réussi son sirotage, il gagne son Cul de chouette mais ne gagne pas de Civet.
 	</div>
 
+	<!-- Bloc 10 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Néant : <br>
 
@@ -185,6 +205,8 @@
 		Lors d’un Néant, le joueur gagne une Grelottine (sauf s’il en a déjà une). Si un des autres joueurs a une Grelotine,
 		il peut alors l’utiliser pour défier le joueur
 	</div>
+
+	<!-- Bloc 11 -->
 
 	<div class="information alert alert-secondary" role="alert">
 		Grelottine : <br>
@@ -204,6 +226,8 @@
 		de chouette, mais perd les 20 points de la Grelottine, et c’est Charlotte qui les gagne.
 	</div>
 
+	<!-- Bloc 12 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		Bévue : <br>
 
@@ -213,6 +237,8 @@
 		frappe du point sur la table et crie « Grelotte ça picote » ! Sophie vient donc de commettre une bévue, car Bob
 		a une Chouette, et non pas une suite.
 	</div>
+
+	<!-- Bloc 13 -->
 
 	<div class="information alert alert-secondary" role="alert">
 		Doublette : <br>
@@ -224,11 +250,13 @@
 		en sachant qu’il faut repartir les membres de chaque équipe de manière équivalente tout autour de la table.
 	</div>
 
+	<!-- Bloc 14 -->
+
 	<div class="information alert alert-secondary" role="alert">
 		<p>
 		C'est marrant mais ...
 		</p>
-		<img src="j'ai rien compris.gif">
+		<img src="../IMAGES/j'ai rien compris.gif">
 
 		<br>
 		<br>
