--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 	<!-- Contenu de la barre de navigation -->
 
 			<div class="col-md-8">
-				<h1>Le Jeu du Cul de Chouette</h1>
+				<h1>
+					Le Jeu du Cul de Chouette
+				</h1>
 
 				<div class="feedback">
 
@@ -46,8 +48,6 @@
 				</div>
 			</div>
 		</nav>
-<br>
-<br>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                             Corps de page                                              -->
@@ -61,14 +61,21 @@
 
 	<br>
 
-	<h2>Origine du jeu :</h2>
-
-
-	<!-- Message -->
+	<!-- Bloc 1 -->
 	<div class="information alert alert-secondary" role="alert">
-	Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
-	par Alexandre Astier et se joue avec trois dés, et idéalement à trois
-	joueurs.
+		<h2>
+			<strong>
+				<span style="color:darkred">
+					Origine du jeu :
+				</span>
+			</strong>
+		</h2>
+
+		<span style="color:blue">
+			Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
+			par Alexandre Astier et se joue avec trois dés, et idéalement à trois
+			joueurs.
+		</span>
 	</div>
 </div>
 
