--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body onload="brython()">
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                         La barre de navigation                                         -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
@@ -78,8 +78,6 @@
 			joueurs.
 		</span>
 	</div>
-	
-</div>
 
 </body>
 </html>
