--- a/index.html
+++ b/index.html
@@ -78,6 +78,27 @@
 			joueurs.
 		</span>
 	</div>
+</div>
+
+<!-- ------------------------------------------------------------------------------------------------------ -->
+<!--                                              Pied de page                                              -->
+<!-- ------------------------------------------------------------------------------------------------------ -->
+
+<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
+	<a class="navbar-brand" href="#">
+		<img src="IMAGES/Logo_2.png" width="80" height="80">
+	</a>
+
+	<div class="col-md-8">
+		<a href="index_conception.html">
+			<button class="btn">
+				<span style='color:lightblue'>
+					Conception
+				</span>
+			</button>
+		</a>
+	</div>
+</nav>
 
 </body>
 </html>
