--- a/index_conception.html
+++ b/index_conception.html
@@ -58,7 +58,7 @@
 					<img src="IMAGES/Logo_Discord.png" width="40" height="40">
 					<a href="https://discord.com/invite/T7drBu8JHs">
 						<span style='color:black'>
-							<-- Mon Discord
+							<-- Mon Serveur Discord
 						</span>
 					</a>
 				</button>
@@ -88,7 +88,7 @@
 		<span style='color:darkred'>
 			Pour revenir a la page d'accueil cliquez sur ma photo de profil !
 		</span>
-		
+
 	</div>
 </div>
 
