--- a/index_conception.html
+++ b/index_conception.html
@@ -24,9 +24,9 @@
 <div class="container">
 	
 	<center>
-		<button class="btn">
+		<div class="alert alert-black" role="alert">
 			<a href="index.html">
-				<img src="IMAGES/Logo_2.png" width="150" height="150">
+				<img src="IMAGES/Logo_2.png" width="140" height="140">
 			</a>
 			<span style='color:white'>
 				<br>
@@ -35,18 +35,17 @@
 				<br>
 				Apprenti développeur
 			</span>
-		</button>
+		</div>
 	</center>
-</div>
+
+	<br>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                         La barre de navigation                                         -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
-
-<div class="container">
-	<div class="information alert alert-secondary" role="alert">
-		<div class="feedback">
 		
+	<div class="alert alert-light" role="alert">
+				
 			<span style='color:black'>
 				<h2>
 					Mes réseaux sociaux :
@@ -56,32 +55,34 @@
 			<center>
 				<button class="btn">
 					<img src="IMAGES/Logo_Discord.png" width="40" height="40">
-					<a href="https://discord.com/invite/T7drBu8JHs">
+					<a href="https://discord.com/invite/T7drBu8JHs" target="_blank">
+						<br>
 						<span style='color:black'>
-							<-- Mon Serveur Discord
+							Discord
 						</span>
 					</a>
 				</button>
 
 				<button class="btn">
-					<a href="https://www.tiktok.com/@andeddo_">
+					<a href="https://www.tiktok.com/@andeddo_" target="_blank">
 						<img src="IMAGES/Logo_TikTok.png" width="40" height="40">
+						<br>
 						<span style='color:black'>
-							<-- Mon TikTok
+							TikTok
 						</span>
 					</a>
 				</button>
 
 				<button class="btn">
-					<a href="https://github.com/Andeddo-04">
-						<img src="IMAGES/Logo_Github.jpg" width="65" height="40">
+					<a href="https://github.com/Andeddo-04" target="_blank">
+						<img src="IMAGES/Logo_Github.jpg" width="40" height="40">
+						<br>
 						<span style='color:black'>
-							<-- Mon GitHub
+							GitHub
 						</span>
 					</a>
 				</button>
 			</center>
-		</div>
 
 		<br>
 
