--- a/5 - Conception/index_conception.html
+++ b/5 - Conception/index_conception.html
@@ -25,8 +25,8 @@
 	
 	<center>
 		<div class="alert alert-black" role="alert">
-			<a href="index.html">
-				<img src="IMAGES/Logo_2.png" width="140" height="140">
+			<a href="../index.html">
+				<img src="../IMAGES/Logo_2.png" width="140" height="140">
 			</a>
 			<span style='color:white'>
 				<br>
@@ -54,7 +54,7 @@
 			
 			<center>
 				<button class="btn">
-					<img src="IMAGES/Logo_Discord.png" width="40" height="40">
+					<img src="../IMAGES/Logo_Discord.png" width="40" height="40">
 					<a href="https://discord.com/invite/T7drBu8JHs" target="_blank">
 						<br>
 						<span style='color:black'>
@@ -65,7 +65,7 @@
 
 				<button class="btn">
 					<a href="https://www.tiktok.com/@andeddo_" target="_blank">
-						<img src="IMAGES/Logo_TikTok.png" width="40" height="40">
+						<img src="../IMAGES/Logo_TikTok.png" width="40" height="40">
 						<br>
 						<span style='color:black'>
 							TikTok
@@ -75,7 +75,7 @@
 
 				<button class="btn">
 					<a href="https://github.com/Andeddo-04" target="_blank">
-						<img src="IMAGES/Logo_Github.jpg" width="40" height="40">
+						<img src="../IMAGES/Logo_Github.jpg" width="40" height="40">
 						<br>
 						<span style='color:black'>
 							GitHub
