update index to index conception

--- a/5 - Conception/index_conception.html
+++ b/5 - Conception/index_conception.html
@@ -53,7 +53,7 @@
 			</span>
 			
 			<center>
-				<button class="btn">
+				<button type="button" class="btn btn-primary">
 					<img src="../IMAGES/Logo_Discord.png" width="40" height="40">
 					<a href="https://discord.com/invite/T7drBu8JHs" target="_blank">
 						<br>
@@ -63,7 +63,7 @@
 					</a>
 				</button>
 
-				<button class="btn">
+				<button type="button" class="btn btn-danger">
 					<a href="https://www.tiktok.com/@andeddo_" target="_blank">
 						<img src="../IMAGES/Logo_TikTok.png" width="40" height="40">
 						<br>
@@ -73,9 +73,9 @@
 					</a>
 				</button>
 
-				<button class="btn">
+				<button type="button" class="btn btn-warning">
 					<a href="https://github.com/Andeddo-04" target="_blank">
-						<img src="../IMAGES/Logo_Github.jpg" width="40" height="40">
+						<img src="../IMAGES/Logo_Github.png" width="40" height="40">
 						<br>
 						<span style='color:black'>
 							GitHub
