--- a/index.html
+++ b/index.html
@@ -25,25 +25,44 @@
 
 		<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">
-				<button class="btn"><img src="IMAGES/Logo.jpg" width="80" height="80"></button>			
+				<button class="btn">
+					<img src="IMAGES/Logo.jpg" width="80" height="80">
+				</button>			
 			</a>
 
 	<!-- Contenu de la barre de navigation -->
 
 			<div class="col-md-8">
 				<h1>
-					Le Jeu du Cul de Chouette
+					<span style="color:white">
+						Le Jeu du Cul de Chouette
+					</span>
 				</h1>
 
 				<div class="feedback">
 
-					<a href="2 - Règles/index2.html"> <button class="btn"><span style='color:lightblue'>Règle</span></button>
+					<a href="2 - Règles/index2.html">
+						<button type="button" class="btn btn-info">
+							<span style='color:white'>
+								Règle
+							</span>
+						</button>
 					</a>
 
-					<a href="3 - Lancer Partie/index3.html"> <button class="btn"><span style='color:lightblue'>Lancer une Partie</span></button>
+					<a href="3 - Lancer Partie/index3.html">
+						<button type="button" class="btn btn-info">
+							<span style='color:white'>
+								Lancer une Partie
+							</span>
+						</button>
 					</a>	
 
-					<a href="4 - Lancer Tuto/index4.html"> <button class="btn"><span style='color:lightblue'>Lancer un Tutoriel</span></button>
+					<a href="4 - Lancer Tuto/index4.html">
+						<button type="button" class="btn btn-info">
+							<span style='color:white'>
+								Lancer un Tutoriel
+							</span>
+						</button>
 					</a>
 				</div>
 			</div>
@@ -86,13 +105,15 @@
 
 <nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 	<a class="navbar-brand" href="#">
-		<img src="IMAGES/Logo_2.png" width="80" height="80">
+		<button class="btn">
+			<img src="IMAGES/Logo_2.png" width="80" height="80">
+		</button>
 	</a>
 
 	<div class="col-md-8">
-		<a href="5 - Conception/index_conception.html">
-			<button class="btn">
-				<span style='color:lightblue'>
+		<a href="/5 - Conception/index_conception.html">
+			<button type="button" class="btn btn-info">
+				<span style='color:white'>
 					Conception
 				</span>
 			</button>
