--- a/3 - Lancer Partie/index3.html
+++ b/3 - Lancer Partie/index3.html
@@ -25,14 +25,21 @@
 		
 		<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">
-				<button class="btn"><img src="../IMAGES/Logo.jpg" width="80" height="80"></button>
+				<button class="btn">
+					<img src="../IMAGES/Logo.jpg" width="80" height="80">
+				</button>
 			</a>
 
 	<!-- Contenu de la barre de navigation -->
 			<div class="col-md-8">
 				<h1>Lancer une Partie</h1>
 
-				<a href="../index.html"><button class="btn"><span style='color:lightblue'>Accueil</span></button>
+				<a href="../index.html">
+					<button type="button" class="btn btn-info">
+						<span style='color:white'>
+							Accueil
+						</span>
+					</button>
 				</a>
 			</div>
 		</nav>
