--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 	</a>
 
 	<div class="col-md-8">
-		<a href="/5 - Conception/index_conception.html">
+		<a href="5 - Conception/index_conception.html">
 			<button type="button" class="btn btn-info">
 				<span style='color:white'>
 					Conception
