update index to index_conception

--- a/index.html
+++ b/index.html
@@ -23,50 +23,54 @@
 	
 	<!-- Création de la barre de navigation -->
 
-		<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-			<a class="navbar-brand" href="#">
-				<button class="btn">
-					<img src="IMAGES/Logo.jpg" width="80" height="80">
-				</button>			
-			</a>
+	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">
+			<button class="btn">
+				<img src="IMAGES/Logo.jpg" width="80" height="80">
+			</button>			
+		</a>
 
 	<!-- Contenu de la barre de navigation -->
 
-			<div class="col-md-8">
-				<h1>
-					<span style="color:white">
-						Le Jeu du Cul de Chouette
-					</span>
-				</h1>
+		<div class="col-md-8">
+			<h1>
+				<span style="color:white">
+					Le Jeu du Cul de Chouette
+				</span>
+			</h1>
 
-				<div class="feedback">
+			<div class="feedback">
 
-					<a href="2 - Règles/index2.html">
-						<button type="button" class="btn btn-info">
-							<span style='color:white'>
-								Règle
-							</span>
-						</button>
-					</a>
+				<a href="2 - Règles/index2.html">
+					<button type="button" class="btn btn-info">
+						<span style='color:white'>
+							Règles
+						</span>
+					</button>
+				</a>
 
-					<a href="3 - Lancer Partie/index3.html">
-						<button type="button" class="btn btn-info">
-							<span style='color:white'>
-								Lancer une Partie
-							</span>
-						</button>
-					</a>	
+				"  "
 
-					<a href="4 - Lancer Tuto/index4.html">
-						<button type="button" class="btn btn-info">
-							<span style='color:white'>
-								Lancer un Tutoriel
-							</span>
-						</button>
-					</a>
-				</div>
+				<a href="3 - Lancer Partie/index3.html">
+					<button type="button" class="btn btn-info">
+						<span style='color:white'>
+							Lancer une Partie
+						</span>
+					</button>
+				</a>
+
+				"  "
+
+				<a href="4 - Lancer Tuto/index4.html">
+					<button type="button" class="btn btn-info">
+						<span style='color:white'>
+							Lancer un Tutoriel
+						</span>
+					</button>
+				</a>
 			</div>
-		</nav>
+		</div>
+	</nav>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                             Corps de page                                              -->
@@ -80,7 +84,7 @@
 
 	<br>
 
-	<!-- Bloc 1 -->
+	<!-- Origine -->
 	
 	<div class="information alert alert-secondary" role="alert">
 		<h2>
@@ -96,6 +100,17 @@
 			par Alexandre Astier et se joue avec trois dés, et idéalement à trois
 			joueurs.
 		</span>
+
+		<br>
+		<br>
+		<br>
+		<br>
+
+		<h5>
+			<u>
+				@copyright Kaamelott
+			</u>
+		</h5>
 	</div>
 </div>
 
