--- a/2 - Règles/index2.html
+++ b/2 - Règles/index2.html
@@ -261,7 +261,7 @@
 
 	<div class="information alert alert-secondary" role="alert">
 		<p>
-		C'est marrant mais ...
+			C'est marrant mais ...
 		</p>
 		<img src="../IMAGES/j'ai rien compris.gif">
 
@@ -272,7 +272,13 @@
 		</p>
 
 		<center>
-		<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		
+			<br>
+
+			<u>
+				@copyright Fabien Olicard
+			</u>
 		</center>
 	</div>
 </div>
