--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 
-<body onload="brython()">
+<body>
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                         La barre de navigation                                         -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
@@ -49,7 +49,7 @@
 					</button>
 				</a>
 
-				"  "
+				""
 
 				<a href="3 - Lancer Partie/index3.html">
 					<button type="button" class="btn btn-info">
@@ -59,7 +59,7 @@
 					</button>
 				</a>
 
-				"  "
+				""
 
 				<a href="4 - Lancer Tuto/index4.html">
 					<button type="button" class="btn btn-info">
@@ -76,65 +76,65 @@
 <!--                                             Corps de page                                              -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
-<div class="container">
+	<div class="container">
 
-	<center>
-	<img src="IMAGES/Ilustration.jpg" width="400" height="400">
-	</center>
-
-	<br>
-
-	<!-- Origine -->
-	
-	<div class="information alert alert-secondary" role="alert">
-		<h2>
-			<strong>
-				<span style="color:darkred">
-					Origine du jeu :
-				</span>
-			</strong>
-		</h2>
-
-		<span style="color:blue">
-			Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
-			par Alexandre Astier et se joue avec trois dés, et idéalement à trois
-			joueurs.
-		</span>
+		<center>
+			<img src="IMAGES/Ilustration.jpg" width="400" height="400">
+		</center>
 
 		<br>
-		<br>
-		<br>
-		<br>
 
-		<h5>
-			<u>
-				@copyright Kaamelott
-			</u>
-		</h5>
+		<!-- Origine -->
+		
+		<div class="information alert alert-secondary" role="alert">
+			<h2>
+				<strong>
+					<span style="color:darkred">
+						Origine du jeu :
+					</span>
+				</strong>
+			</h2>
+
+			<span style="color:blue">
+				Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
+				par Alexandre Astier et se joue avec trois dés, et idéalement à trois
+				joueurs.
+			</span>
+
+			<br>
+			<br>
+			<br>
+			<br>
+
+			<h5>
+				<u>
+					@copyright Kaamelott
+				</u>
+			</h5>
+		</div>
 	</div>
-</div>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                              Pied de page                                              -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
-<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-	<a class="navbar-brand" href="#">
-		<button class="btn">
-			<img src="IMAGES/Logo_2.png" width="80" height="80">
-		</button>
-	</a>
-
-	<div class="col-md-8">
-		<a href="5 - Conception/index_conception.html">
-			<button type="button" class="btn btn-info">
-				<span style='color:white'>
-					Conception
-				</span>
+	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
+		<a class="navbar-brand" href="#">
+			<button class="btn">
+				<img src="IMAGES/Logo_2.png" width="80" height="80">
 			</button>
 		</a>
-	</div>
-</nav>
+
+		<div class="col-md-8">
+			<a href="5 - Conception/index_conception.html">
+				<button type="button" class="btn btn-info">
+					<span style='color:white'>
+						Conception
+					</span>
+				</button>
+			</a>
+		</div>
+	</nav>
 
 </body>
 </html>
