--- a/5 - Conception/index_conception.html
+++ b/5 - Conception/index_conception.html
@@ -25,9 +25,7 @@
 	
 	<center>
 		<div class="alert alert-black" role="alert">
-			<a href="../index.html">
-				<img src="../IMAGES/Logo_2.png" width="140" height="140">
-			</a>
+			<img src="../IMAGES/Logo_2.png" width="140" height="140">
 			<span style='color:white'>
 				<br>
 				<br>
@@ -53,30 +51,49 @@
 			</span>
 			
 			<center>
-				<button type="button" class="btn btn-primary">
-					<a href="https://discord.com/invite/T7drBu8JHs	" target="_blank">
+
+				<!-- Bouton DISCORD -->
+
+				<button type="btn" class="btn btn-primary">
+					<a href="https://discord.com/invite/T7drBu8JHs" target="_blank">
 						<img src="../IMAGES/Logo_Discord.png" width="40" height="40">
 					</a>
 				</button>
 
-				<button type="button" class="btn btn-danger">
+				<!-- Bouton TIKTOK -->
+
+				<button type="btn" class="btn btn-danger">
 					<a href="https://www.tiktok.com/@andeddo_" target="_blank">
 						<img src="../IMAGES/Logo_TikTok.png" width="40" height="40">
 					</a>
 				</button>
 
-				<button type="button" class="btn btn-warning">
+				<!-- Bouton GITHUB -->
+
+				<button type="btn" class="btn btn-warning">
 					<a href="https://github.com/Andeddo-04" target="_blank">
 						<img src="../IMAGES/Logo_Github.png" width="40" height="40">
+					</a>
+				</button>
+
+				<!-- Bouton TWITTER -->
+
+				<button type="btn" class="btn btn-info">
+					<a href="https://twitter.com/YChapelliere" target="_blank">
+						<img src="../IMAGES/Logo_Twitter.png" width="40" height="40">
 					</a>
 				</button>
 			</center>
 
 		<br>
 
-		<span style='color:darkred'>
-			Pour revenir a la page d'accueil cliquez sur ma photo de profil !
-		</span>
+		<a href="../index.html">
+			<button type="btn" class="btn btn-light">
+				<span style='color:darkred'>
+					Pour revenir a la page d'accueil cliquez ici
+				</span>
+			</button>
+		</a>
 
 	</div>
 </div>
