--- a/5 - Conception/index_conception.html
+++ b/5 - Conception/index_conception.html
@@ -7,7 +7,7 @@
 	<!-- Bug Safari 9 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="../IMAGES/Logo.jpg" >
+	<link rel="shortcut icon" href="../IMAGES/Icone.jpg" >
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- Leaflet CSS -->
@@ -25,7 +25,7 @@
 	
 	<center>
 		<div class="alert alert-black" role="alert">
-			<img src="../IMAGES/Logo_2.png" width="140" height="140">
+			<img src="../IMAGES/Logo.png" width="140" height="140">
 			<span style='color:white'>
 				<br>
 				<br>
