--- a/index.html
+++ b/index.html
@@ -1,129 +1,131 @@
 <!DOCTYPE html>
 <html>
-<title>Le CUL DE CHOUETTE</title>
-<head>
-	<!-- Meta -->
-	<meta charset="utf-8">
-	<!-- Bug Safari 9 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
-	<!-- Favicon -->
-	<link rel="shortcut icon" href="IMAGES/Logo.jpg" >
-	<!-- Bootstrap -->
-	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-	<!-- Leaflet CSS -->
-	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
-	<!-- Feuille de style -->
-	<link rel="stylesheet" href="style.css">
-</head>
 
-<body>
+	<title>Le CUL DE CHOUETTE</title>
+	
+	<head>
+		<!-- Meta -->
+		<meta charset="utf-8">
+		<!-- Bug Safari 9 -->
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
+		<!-- Favicon -->
+		<link rel="shortcut icon" href="IMAGES/Icone.jpg" >
+		<!-- Bootstrap -->
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+		<!-- Leaflet CSS -->
+		<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
+		<!-- Feuille de style -->
+		<link rel="stylesheet" href="style.css">
+	</head>
+
+	<body>
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                         La barre de navigation                                         -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 	
-	<!-- Création de la barre de navigation -->
+		<!-- Création de la barre de navigation -->
 
-	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">
-			<button class="btn">
-				<img src="IMAGES/Logo.jpg" width="80" height="80">
-			</button>			
-		</a>
+		<nav class="navbar navbar-expand-1g navbar-black bg-black">
+			<a class="navbar-brand" href="#">
+				<button class="btn">
+					<img src="IMAGES/Icone.jpg" width="80" height="80">
+				</button>			
+			</a>
 
-	<!-- Contenu de la barre de navigation -->
+		<!-- Contenu de la barre de navigation -->
 
-		<div class="col-md-8">
-			<h1>
-				<span style="color:white">
-					Le Jeu du Cul de Chouette
-				</span>
-			</h1>
+			<div class="col-md-8">
+				<h1>
+					<span style="color:white">
+						Le Jeu du Cul de Chouette
+					</span>
+				</h1>
 
-			<div class="feedback">
+				<div class="feedback">
 
-				<a href="2 - Règles/index2.html">
-					<button type="button" class="btn btn-info">
-						<span style='color:white'>
-							Règles
-						</span>
-					</button>
-				</a>
+					<a href="2 - Règles/index2.html">
+						<button type="button" class="btn btn-info">
+							<span style='color:white'>
+								Règles
+							</span>
+						</button>
+					</a>
 
-				""
+					""
 
-				<a href="3 - Lancer Partie/index3.html">
-					<button type="button" class="btn btn-info">
-						<span style='color:white'>
-							Lancer une Partie
-						</span>
-					</button>
-				</a>
+					<a href="3 - Lancer Partie/index3.html">
+						<button type="button" class="btn btn-info">
+							<span style='color:white'>
+								Lancer une Partie
+							</span>
+						</button>
+					</a>
 
-				""
+					""
 
-				<a href="4 - Lancer Tuto/index4.html">
-					<button type="button" class="btn btn-info">
-						<span style='color:white'>
-							Lancer un Tutoriel
-						</span>
-					</button>
-				</a>
+					<a href="4 - Lancer Tuto/index4.html">
+						<button type="button" class="btn btn-info">
+							<span style='color:white'>
+								Lancer un Tutoriel
+							</span>
+						</button>
+					</a>
+				</div>
 			</div>
-		</div>
-	</nav>
+		</nav>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                             Corps de page                                              -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
-	<div class="container">
+		<div class="container">
 
-		<center>
-			<img src="IMAGES/Ilustration.jpg" width="400" height="400">
-		</center>
+			<center>
+				<img src="IMAGES/Ilustration.jpg" width="400" height="400">
+			</center>
 
-		<br>
+			<br>
 
-		<!-- Origine -->
-		
-		<div class="information alert alert-secondary" role="alert">
-			<h2>
-				<strong>
-					<span style="color:darkred">
-						Origine du jeu :
-					</span>
-				</strong>
-			</h2>
+			<!-- Origine -->
+			
+			<div class="information alert alert-secondary" role="alert">
+				<h2>
+					<strong>
+						<span style="color:darkred">
+							Origine du jeu :
+						</span>
+					</strong>
+				</h2>
 
-			<span style="color:blue">
-				Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
-				par Alexandre Astier et se joue avec trois dés, et idéalement à trois
-				joueurs.
-			</span>
+				<span style="color:blue">
+					Le jeu du Cul de Chouette est un jeu originaire de la série Kaamelott créée
+					par Alexandre Astier et se joue avec trois dés, et idéalement à trois
+					joueurs.
+				</span>
+			</div>
 		</div>
-	</div>
 
 <!-- ------------------------------------------------------------------------------------------------------ -->
 <!--                                              Pied de page                                              -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
-	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
-		<a class="navbar-brand" href="#">
-			<button class="btn">
-				<img src="IMAGES/Logo_2.png" width="80" height="80">
-			</button>
-		</a>
-
-		<div class="col-md-8">
-			<a href="5 - Conception/index_conception.html">
-				<button type="button" class="btn btn-info">
-					<span style='color:white'>
-						Conception
-					</span>
+		<nav class="navbar navbar-expand-1g navbar-black bg-black">
+			<a class="navbar-brand" href="#">
+				<button class="btn">
+					<!--img src="IMAGES/Logo.png" width="80" height="80"-->
 				</button>
 			</a>
-		</div>
-	</nav>
 
-</body>
+			<div class="col-md-8">
+				<a href="5 - Conception/index_conception.html">
+					<button type="button" class="btn btn-info">
+						<span style='color:white'>
+							Conception
+						</span>
+					</button>
+				</a>
+			</div>
+		</nav>
+
+	</body>
 </html>
