--- a/4 - Lancer Tuto/index4.html
+++ b/4 - Lancer Tuto/index4.html
@@ -7,7 +7,7 @@
 	<!-- Bug Safari 9 -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
 	<!-- Favicon -->
-	<link rel="shortcut icon" href="../IMAGES/Logo.jpg" >
+	<link rel="shortcut icon" href="../IMAGES/Icone.jpg" >
 	<!-- Bootstrap -->
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 	<!-- Leaflet CSS -->
@@ -26,7 +26,7 @@
 	<nav class="navbar navbar-expand-1g navbar-dark bg-dark">
 		<a class="navbar-brand" href="#">
 			<button class="btn">
-				<img src="../IMAGES/Logo.jpg" width="80" height="80">
+				<img src="../IMAGES/Icone.jpg" width="80" height="80">
 			</button>
 		</a>
 
