--- a/5 - Conception/index_conception.html
+++ b/5 - Conception/index_conception.html
@@ -2,6 +2,7 @@
 <html>
 <title>Le CUL DE CHOUETTE</title>
 <head>
+
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<!-- Bug Safari 9 -->
@@ -14,6 +15,9 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 	<!-- Feuille de style -->
 	<link rel="stylesheet" href="style_conception.css">
+	<!-- Importtation de la bibliothèque font-awesome -->
+	<script src="https://kit.fontawesome.com/b72c2c9be7.js"></script>
+
 </head>
 
 <body>
@@ -21,82 +25,56 @@
 <!--                                             Corps de page                                              -->
 <!-- ------------------------------------------------------------------------------------------------------ -->
 
-<div class="container">
-	
-	<center>
-		<div class="alert alert-black" role="alert">
-			<img src="../IMAGES/Logo.png" width="140" height="140">
-			<span style='color:white'>
-				<br>
-				<br>
-				|ま| Andeddo |ま|
-				<br>
-				Apprenti développeur
-			</span>
-		</div>
-	</center>
+<div class="box">
 
-	<br>
+	<div class="card">
 
-<!-- ------------------------------------------------------------------------------------------------------ -->
-<!--                                         La barre de navigation                                         -->
-<!-- ------------------------------------------------------------------------------------------------------ -->
+		<div class="informations">
 		
-	<div class="alert alert-light" role="alert">
-				
-			<span style='color:black'>
-				<h2>
-					Mes réseaux sociaux :
-				</h2>
-			</span>
+			<img src="../IMAGES/Logo.png" atl="Ma PP">
 			
-			<center>
+			<h1>Andeddo</h1>
+			
+			<h2>Apprenti développeur</h2>
+			
+		</div>
 
-				<!-- Bouton DISCORD -->
+		<div class="icon">
+		
+			<a href="https://discord.com/invite/T7drBu8JHs" target="_blank">
+				<i class="fab fa-discord fa-2x"></i>
+			</a>
 
-				<button type="btn" class="btn btn-primary">
-					<a href="https://discord.com/invite/T7drBu8JHs" target="_blank">
-						<img src="../IMAGES/Logo_Discord.png" width="40" height="40">
-					</a>
-				</button>
+			<a href="https://www.tiktok.com/@andeddo_" target="_blank">
+				<i class="fab fa-tiktok fa-2x"></i>
+			</a>
+		
+			<a href="https://github.com/Andeddo-04" target="_blank">
+				<i class="fab fa-github fa-2x"></i>
+			</a>
 
-				<!-- Bouton TIKTOK -->
+			
 
-				<button type="btn" class="btn btn-danger">
-					<a href="https://www.tiktok.com/@andeddo_" target="_blank">
-						<img src="../IMAGES/Logo_TikTok.png" width="40" height="40">
-					</a>
-				</button>
+		</div>
 
-				<!-- Bouton GITHUB -->
-
-				<button type="btn" class="btn btn-warning">
-					<a href="https://github.com/Andeddo-04" target="_blank">
-						<img src="../IMAGES/Logo_Github.png" width="40" height="40">
-					</a>
-				</button>
-
-				<!-- Bouton TWITTER -->
-
-				<button type="btn" class="btn btn-info">
-					<a href="https://twitter.com/YChapelliere" target="_blank">
-						<img src="../IMAGES/Logo_Twitter.png" width="40" height="40">
-					</a>
-				</button>
-			</center>
-
-		<br>
-
-		<a href="../index.html">
-			<button type="btn" class="btn btn-light">
-				<span style='color:darkred'>
-					Pour revenir a la page d'accueil cliquez ici
-				</span>
-			</button>
-		</a>
+		
 
 	</div>
+
+	<br>
+	<br>
+
+	<center>
+		<a href="../index.html">
+			<button type="btn">
+				Pour revenir a la page d'accueil cliquez ici
+			</button>
+		</a>
+	</center>
+
 </div>
+
+
 
 </body>
 </html>
