update index conception

--- a/5 - Conception/index_conception.html
+++ b/5 - Conception/index_conception.html
@@ -15,7 +15,7 @@
 	<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css" integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A==" crossorigin=""/>
 	<!-- Feuille de style -->
 	<link rel="stylesheet" href="style_conception.css">
-	<!-- Importtation de la bibliothèque font-awesome -->
+	<!-- Importation de la bibliothèque font-awesome -->
 	<script src="https://kit.fontawesome.com/b72c2c9be7.js"></script>
 
 </head>
