--- a/2 - Règles/index2.html
+++ b/2 - Règles/index2.html
@@ -5,7 +5,7 @@
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<!-- Bug Safari 9 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../IMAGES/Icone.jpg" >
 	<!-- Bootstrap -->
@@ -262,7 +262,7 @@
 		<p>
 			C'est marrant mais ...
 		</p>
-		<img src="../IMAGES/j'ai rien compris.gif">
+		<img src="../IMAGES/j'ai rien compris.gif" width="390" height="283">
 
 		<br>
 		<br>
@@ -271,13 +271,8 @@
 		</p>
 
 		<center>
-			<iframe width="790" height="383" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		
-			<br>
+			<iframe width="390" height="283" src="https://www.youtube.com/embed/A0qEn5BD0Q8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-			<u>
-				@copyright Fabien Olicard
-			</u>
 		</center>
 	</div>
 </div>
