--- a/4 - Lancer Tuto/index4.html
+++ b/4 - Lancer Tuto/index4.html
@@ -5,7 +5,7 @@
 	<!-- Meta -->
 	<meta charset="utf-8">
 	<!-- Bug Safari 9 -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink'to-fit=no">
+	<meta name="viewport" content="width=device-width">
 	<!-- Favicon -->
 	<link rel="shortcut icon" href="../IMAGES/Icone.jpg" >
 	<!-- Bootstrap -->
